--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
 <body>
     <nav id="navbar">
-        <div class="navbar__title"><a href="#whoami">Antonella Churruarin</a></div>
+        <div class="navbar__title"><a href="#whoiam">Antonella Churruarin</a></div>
         <div class="navbar__menu">
             <div class="navbar__button" id="btn_menu"></div>
             <ul class="navbar__list" id="list_menu">
-                <li class="menu__item1"><a href="#whoami">Quién soy?</a></li>
+                <li class="menu__item1"><a href="#whoiam">Quién soy?</a></li>
                 <li class="menu__item2"><a href="#myservices">Mis servicios</a></li>
                 <li class="menu__item3"><a href="#myproyects">Mis proyectos</a></li>
                 <li class="menu__item4"><a href="#contacts">Canales de contacto</a></li>
@@ -26,29 +26,23 @@
     </nav>
     <main>
         <div class="container">
-            <section id="whoami">
+            <section id="whoiam">
                 <div class="profile-photo"></div>
                 <div class="profile-info">
                     <p>La identidad visual es uno de los conceptos más importantes a dominar , ya que tendemos a
-                        relacionar nuestros sentidos con emociones. Te ayudo con ello.</p>
+                        relacionar nuestros sentidos con emociones.</p>
+                    <p>Destaco por identificar tus aptitudes y poder plasmarlas en un diseño que te identifique</p>
                 </div>
             </section>
             <section id="myservices">
                 <div class="">
                     <h3>Diseño gráfico</h3>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi praesentium labore nostrum
-                        atque, quia laudantium quam ab provident quaerat. Rerum et maxime ab ex saepe temporibus sit
-                        amet debitis perferendis!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Consequatur laborum voluptatibus nulla modi ex incidunt dolores corporis. Aliquam assumenda
-                        porro harum modi eligendi, quam itaque soluta aliquid? Fugiat, odit expedita!</p>
+                    <p><b>Experta</b> en branding, rebranding y creación de marca <em>personal</em></p>
+                    <p></p>
                 </div>
                 <div class="">
                     <h3>Marketing digital</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt blanditiis nisi, provident
-                        numquam similique ad earum mollitia fuga iure. Necessitatibus ut, atque reiciendis nihil ducimus
-                        accusamus aperiam suscipit voluptates excepturi. Lorem ipsum dolor sit amet, consectetur
-                        adipisicing elit. Nam cum quae eos quod ducimus dolor cumque aspernatur, itaque sed vel culpa
-                        neque voluptatum fugiat odit, rem harum vero perferendis temporibus?</p>
+                    <p>Planificación y proceso es lo que se necesita para avanzar y alcanzar a potenciales clientes</p>
                 </div>
             </section>
             <section id="myproyects">
@@ -73,7 +67,9 @@
                 </div>
             </section>
             <section id="unavailable">
-                <div class="default"><h2>Esperá, aún hay más...</h2></div>
+                <div class="default">
+                    <h2>Esperá, aún hay más...</h2>
+                </div>
                 <div class="default">
                     <h4>Estoy preparando algo nuevo para la comunidad</h4>
                     <p>Muy pronto vas a poder ser parte de un movimiento grandioso que va a cambiar la forma de ver y
