--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
                 <div class="default">
                     <p>Soy una mujer <b>emprendedora</b> y <b>autodidacta</b> en Marketing Digital y Diseño Gráfico
                         orientado a redes
-                        sociales y marca personal, trabajo de manera <em>freelance</em> en proyectos a corto y mediano
-                        plazo.</p>
+                        sociales y marca personal.</p>
                     <p>Experta en plasmar tu identidad en un diseño único y atractivo, capaz de transformar
                         las ideas expuestas en una imagen que se adapte con tu emprendimiento y producto.</p>
                 </div>
@@ -48,15 +47,41 @@
                 </div>
             </section>
             <section id="myservices">
+                <div class="image-content w100">
+                    <h3 class="text-center">Porqué es importante...</h3>
+                    
+                </div>
                 <div class="default image-content" id="design">
-                    <h3 class="text-center">Diseño gráfico</h3>
-                    <p><b>Experta</b> en branding, rebranding y creación de marca <em>personal</em></p>
-                    <p></p>
+                    <h3 class="text-center">Community manager</h3>
+                    <ul class="list">
+                        <li class="list-item">Llevo tus redes sociales por el tiempo solicitado</li>
+                        <li class="list-item">Optimizo tu biografía</li>
+                        <li class="list-item">3 publicaciones semanales</li>
+                        <li class="list-item">2 historias diarias</li>
+                        <li class="list-item">Incluye interacción</li>
+                        <li>
+                            <h3 class="text-center">precio por cada red social 40 U$D</h3>
+                        </li>
+                    </ul>
                 </div>
                 <div class="default image-content" id="marketing">
-                    <h3 class="text-center">Marketing digital</h3>
-                    <p>Planificación y proceso es lo que se necesita para avanzar y alcanzar a potenciales clientes</p>
+                    <h3 class="text-center">Diseño</h3>
+                    <ul class="list">
+                        <li class="list-item">Logo con variaciones de color</li>
+                        <li class="list-item">2 tipos de fuentes</li>
+                        <li class="list-item">Diseño de tarjeta de presentación simple</li>
+                        <li>
+                            <h3>Logo con variación de color + 2 tipos de fuentes <em>7 U$D</em></h3>
+                        </li>
+                        <li>
+                            <h3>Diseño de tarjeta de presentación <em>10 U$D</em></h3>
+                        </li>
+                        <li>
+                            <h3>Logo + tarjeta de presentación <em>20 U$D</em></h3>
+                        </li>
+                    </ul>
                 </div>
+
             </section>
             <section id="contacts">
                 <div class="default">
