--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <section id="myservices">
                 <div class="image-content w100">
                     <h3 class="text-center">Porqué es importante...</h3>
-                    
+
                 </div>
                 <div class="default image-content" id="design">
                     <h3 class="text-center">Community manager</h3>
@@ -86,10 +86,11 @@
             <section id="contacts">
                 <div class="default">
                     <h1 class="text-center">Canales de contacto</h1>
-                    <h2 class="flex-order">Encontrame en instagram <a target="_blank"
-                            href="http://www.instagram.com/churruarinantonella"><i class="icon i-instagram"></i></a>
+                    <h2 class="flex-order">Encontrame en instagram <a class="flex-start" target="_blank"
+                            href="http://www.instagram.com/churruarinantonella"><i
+                                class="icon i-instagram"></i></a>
                     </h2>
-                    <h2 class="flex-order">Escribime al correo <a target="_blank"
+                    <h2 class="flex-order">Escribime al correo <a class="flex-start" target="_blank"
                             href="mailto:antonellachurruarin@gmail.com"><i class="icon i-gmail"></i></a></h2>
                 </div>
             </section>
@@ -98,9 +99,9 @@
                     <h2 class="flex-order">Esperá, aún hay más...<span class="icon i-stop"></span></h2>
                 </div>
                 <div class="default">
-                    <h4>Estoy preparando algo nuevo para la comunidad</h4>
-                    <p>Muy pronto vas a poder ser parte de un movimiento grandioso que va a cambiar la forma de ver y
-                        aprender estos temas.</p>
+                    <h3 class="text-color">Estoy preparando algo nuevo para la comunidad</h3>
+                    <h3>Muy pronto vas a poder ser parte de un movimiento grandioso que va a cambiar la forma de ver y
+                        aprender estos temas.</h3>
                 </div>
             </section>
         </div>
