--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
                 <h3 class="default">Mis proyectos</h3>
                 <div class="default">
                     <ul class="tab">
-                        <li class="tab-item">Proyecto A <a href="#">Link</a></li>
-                        <li class="tab-item">Proyecto B <a href="#">Link</a></li>
-                        <li class="tab-item">Proyecto C <a href="#">Link</a></li>
-                        <li class="tab-item">Proyecto D <a href="#">Link</a></li>
+                        <li class="tab-item"><img src="src/static/cards.jpg" alt="Cartas de presentación"></li>
+                        <li class="tab-item"><img src="src/static/logo-gv.jpg" alt="GesVen"></li>
+                        <li class="tab-item"><img src="src/static/logo-3estrellas.jpg" alt="3 estrellas"></li>
+                        <li class="tab-item"><img src="src/static/logo-cancionero.jpg" alt="Cancionero"></li>
                     </ul>
                 </div>
             </section>
@@ -87,8 +87,7 @@
                 <div class="default">
                     <h1 class="text-center">Canales de contacto</h1>
                     <h2 class="flex-order">Encontrame en instagram <a class="flex-start" target="_blank"
-                            href="http://www.instagram.com/churruarinantonella"><i
-                                class="icon i-instagram"></i></a>
+                            href="http://www.instagram.com/churruarinantonella"><i class="icon i-instagram"></i></a>
                     </h2>
                     <h2 class="flex-order">Escribime al correo <a class="flex-start" target="_blank"
                             href="mailto:antonellachurruarin@gmail.com"><i class="icon i-gmail"></i></a></h2>
